# src/routes/swagger.json
@@ -938,6 +938,9 @@
 					},
 					"endpoint": {
 						"type": "string"
+					},
+					"isDefault": {
+						"type": "boolean"
 					}
 				},
 				"required": [
@@ -1379,7 +1382,8 @@
 					},
 					"credentialSubject": {
 						"$ref": "#/components/schemas/SingleOrArray_JsonObject_"
-					}
+					},
+					"prettyVc": {}
 				},
 				"required": [
 					"@context",
@@ -2890,26 +2894,8 @@
 							"application/json": {
 								"schema": {
 									"properties": {
-										"recipientKey": {
-											"anyOf": [
-												{
-													"properties": {
-														"recipientKey": {}
-													},
-													"type": "object"
-												},
-												{
-													"properties": {
-														"recipientKey": {
-															"type": "string"
-														}
-													},
-													"required": [
-														"recipientKey"
-													],
-													"type": "object"
-												}
-											]
+										"invitationDid": {
+											"type": "string"
 										},
 										"outOfBandRecord": {
 											"$ref": "#/components/schemas/Record_string.unknown_"
@@ -2922,7 +2908,7 @@
 										}
 									},
 									"required": [
-										"recipientKey",
+										"invitationDid",
 										"outOfBandRecord",
 										"invitation",
 										"invitationUrl"
@@ -4292,6 +4278,15 @@
 						"schema": {
 							"type": "string"
 						}
+					},
+					{
+						"in": "query",
+						"name": "isDefault",
+						"required": false,
+						"schema": {
+							"default": false,
+							"type": "boolean"
+						}
 					}
 				]
 			}
@@ -4399,6 +4394,66 @@
 						"content": {
 							"application/json": {
 								"schema": {},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"_tags": {
+												"invitationDid": "did:peer:2.SeyJzIjoiaHR0cHM6Ly9kYTIzLTg5LTIwLTE2Mi0xNDYubmdyb2suaW8iLCJ0IjoiZGlkLWNvbW11bmljYXRpb24iLCJwcmlvcml0eSI6MCwicmVjaXBpZW50S2V5cyI6WyJkaWQ6a2V5Ono2TWtualg3U1lXRmdHMThCYkNEZHJnemhuQnA0UlhyOGVITHZxQ3FvRXllckxiTiN6Nk1rbmpYN1NZV0ZnRzE4QmJDRGRyZ3pobkJwNFJYcjhlSEx2cUNxb0V5ZXJMYk4iXSwiciI6W119",
+												"did": "did:peer:1zQmfQh1T3rSqarP2FZ37uKjdQHPKFdVyo2mGiAPHZ8Ep7hv",
+												"invitationKey": "9HG4rJFpLiWf56MWxHj9rgdpErFzim2zEpHuxy1dw7oz",
+												"outOfBandId": "edbc89fe-785f-4774-a288-46012486881d",
+												"verkey": "9HG4rJFpLiWf56MWxHj9rgdpErFzim2zEpHuxy1dw7oz"
+											},
+											"metadata": {},
+											"id": "821f9b26-ad04-4f56-89b6-e2ef9c72b36e",
+											"createdAt": "2022-01-01T00:00:00.000Z",
+											"did": "did:peer:1zQmfQh1T3rSqarP2FZ37uKjdQHPKFdVyo2mGiAPHZ8Ep7hv",
+											"invitationDid": "did:peer:2.SeyJzIjoiaHR0cHM6Ly9kYTIzLTg5LTIwLTE2Mi0xNDYubmdyb2suaW8iLCJ0IjoiZGlkLWNvbW11bmljYXRpb24iLCJwcmlvcml0eSI6MCwicmVjaXBpZW50S2V5cyI6WyJkaWQ6a2V5Ono2TWtualg3U1lXRmdHMThCYkNEZHJnemhuQnA0UlhyOGVITHZxQ3FvRXllckxiTiN6Nk1rbmpYN1NZV0ZnRzE4QmJDRGRyZ3pobkJwNFJYcjhlSEx2cUNxb0V5ZXJMYk4iXSwiciI6W119",
+											"outOfBandId": "edbc89fe-785f-4774-a288-46012486881d"
+										}
+									}
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"MultiTenancy"
+				],
+				"security": [
+					{
+						"apiKey": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "tenantId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "path",
+						"name": "connectionId",
+						"required": true,
+						"schema": {
+							"$ref": "#/components/schemas/RecordId"
+						}
+					}
+				]
+			},
+			"delete": {
+				"operationId": "DeleteConnectionById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Record_string.any_"
+								},
 								"examples": {
 									"Example 1": {
 										"value": {
@@ -5387,6 +5442,47 @@
 						"required": false,
 						"schema": {
 							"$ref": "#/components/schemas/CredentialState"
+						}
+					}
+				]
+			}
+		},
+		"/multi-tenancy/credentialsFormatData/{credentialRecordId}/{tenantId}": {
+			"get": {
+				"operationId": "GetCredentialFormatDataById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"MultiTenancy"
+				],
+				"security": [
+					{
+						"apiKey": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "credentialRecordId",
+						"required": true,
+						"schema": {
+							"$ref": "#/components/schemas/RecordId"
+						}
+					},
+					{
+						"in": "path",
+						"name": "tenantId",
+						"required": true,
+						"schema": {
+							"type": "string"
 						}
 					}
 				]
@@ -7261,26 +7357,8 @@
 							"application/json": {
 								"schema": {
 									"properties": {
-										"recipientKey": {
-											"anyOf": [
-												{
-													"properties": {
-														"recipientKey": {}
-													},
-													"type": "object"
-												},
-												{
-													"properties": {
-														"recipientKey": {
-															"type": "string"
-														}
-													},
-													"required": [
-														"recipientKey"
-													],
-													"type": "object"
-												}
-											]
+										"invitationDid": {
+											"type": "string"
 										},
 										"outOfBandRecord": {
 											"$ref": "#/components/schemas/Record_string.unknown_"
@@ -7293,7 +7371,7 @@
 										}
 									},
 									"required": [
-										"recipientKey",
+										"invitationDid",
 										"outOfBandRecord",
 										"invitation",
 										"invitationUrl"
